--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" >
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,7 +29,8 @@
         <activity android:name=".ReceptionActivity" />
         <activity android:name=".SecurityActivity" />
         <activity android:name=".RoomServiceActivity" />
-        <activity android:name=".questionnairesActivity"></activity>
+        <activity android:name=".questionnairesActivity" />
+        <activity android:name=".ActivitiesActivity"></activity>
     </application>
 
 </manifest>
