--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +30,8 @@
         <activity android:name=".SecurityActivity" />
         <activity android:name=".RoomServiceActivity" />
         <activity android:name=".questionnairesActivity" />
-        <activity android:name=".ActivitiesActivity"></activity>
+        <activity android:name=".ActivitiesActivity" />
+        <activity android:name=".BookTaxiActivity"></activity>
     </application>
 
 </manifest>
