--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -31,7 +32,9 @@
         <activity android:name=".RoomServiceActivity" />
         <activity android:name=".questionnairesActivity" />
         <activity android:name=".ActivitiesActivity" />
-        <activity android:name=".BookTaxiActivity"></activity>
+        <activity android:name=".BookTaxiActivity" />
+        <activity android:name=".BookTripActivity" />
+        <activity android:name=".WakeUpCall"></activity>
     </application>
 
 </manifest>
